Closed
Bug 62763
Opened 25 years ago
Closed 25 years ago
using mouse wheel in textarea with style: "overflow:hidden" causes crash
Categories
(Core :: XUL, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla0.8
People
(Reporter: scott, Assigned: bryner)
Details
(Keywords: crash)
Attachments
(1 file)
|
718 bytes,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux 2.2.16-22 i686; en-US; m18) Gecko/20001211
BuildID: 2000121112
When the mouse wheel is moved within a text area that has the style property set
to "overflow:hidden" this crashes Mozilla.
Reproducible: Always
Steps to Reproduce:
1.Give focus to a textarea that has the style property set to "overflow:hidden"
2.Move mouse wheel
Actual Results: Mozilla crashes with the following message:
/usr/local/mozilla/run-mozilla.sh: line 72: 5997 Segmentation fault $prog
${1+"$@"}
Expected Results: Nothing (I think)
I used the following page to reproduce the problem:
<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> <HTML>
<HEAD>
<TITLE>Text Area Test</TITLE>
</HEAD>
<BODY BGCOLOR="#FFFFFF" LINK="#0000FF" ALINK="" VLINK="#6666FF">
<CENTER>
<form action="" method="GET">
<textarea cols=15 rows=4 name="test" style="overflow:hidden"></textarea>
</form>
</body>
</html>
Comment 1•25 years ago
|
||
ack
Assignee: pierre → bryner
Severity: normal → critical
Status: UNCONFIRMED → NEW
Component: Style System → XP Toolkit/Widgets
Ever confirmed: true
Keywords: crash
QA Contact: chrisd → janc
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Priority: P3 → P2
Target Milestone: --- → mozilla0.9
| Assignee | ||
Updated•25 years ago
|
Target Milestone: mozilla0.9 → mozilla0.8
| Assignee | ||
Comment 2•25 years ago
|
||
Comment 3•25 years ago
|
||
r=sspitzer
| Assignee | ||
Comment 5•25 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•