Bug 62763 - null check to prevent crash when mousewheel scrolling a textarea with style overflow:hidden.  r=sspitzer, sr=tor.